feature: add query params for beer controller